--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "rb",
+  "name": "gallery-app",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "dotenv": "^16.4.7",
-    "ejs": "^3.1.10",
-    "express": "^4.21.1",
-    "mongoose": "^8.8.3",
-    "multer": "^1.4.5-lts.1"
+    "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {},
+  "engines": {
+    "node": "16.x"
   }
 }
