--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^8.8.3",
     "multer": "^1.4.2",
     "path": "^0.12.7"
   },
